@@ -1,5 +1,10 @@
 2023-08-31  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* tmac/tests/localization-works.sh: Test hyphenation modes for
+	Spanish and Russian.
+
+2023-08-31  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* tmac/es.tmac: Correct hyphenation mode used when suppressing
 	hyphenation before traps.  A "base" mode of 1 should map to 2,
 	not to 6, as (possibly) copied-and-pasted from "fr.tmac".
